# biominer-llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
example/: .env  llm.ipynb
src/biominer_llm/: __init__.py  config.py  core.py
tests/: conftest.py
tests/test_default_biominer_prefix/: test_config_prefix.py
tests/test_priority/: test_config_priority.py
tests/test_with_env_file/: .1env  .2env  .3env  .5env  test_config_file.py
tests/test_with_manual/: test_config.py  test_custom_base_url.py  test_init_llm.py
