[project]
name = "biominer-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OpenProphetDB"}
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.10",
    "langchain-anthropic>=0.0.10",
    "langchain-ollama>=0.0.10",
    "langchain-xai>=0.0.10",
    "langchain-google-genai>=0.0.10",
    "langchain-core>=0.3.74",
    "pydantic-settings>=2.10.1",
]
[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
